--- a/VI-RA-1.html
+++ b/VI-RA-1.html
@@ -1047,7 +1047,7 @@ h6:hover .anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Renyi-Alpha-Divergence">Renyi Alpha Divergence<a class="anchor-link" href="#Renyi-Alpha-Divergence">¶</a></h1><p>In many areas of machine learning, we use the KL-divergence to measure the 'distance' between probability distributions. However, the KL-divergence is a special case of a wider range of $\alpha$-family divergences. One of interest in the VI literature is the Renyi $\alpha$ divergence, and this post is a short note on this family. This post is one of a series, and this post in mainly theory based on <a href="https://arxiv.org/pdf/1602.02311.pdf">Renyi Divergence Variational Inference</a>, submitted to NIPS 2016.</p>
+<h1 id="Renyi-Alpha-Divergence">Renyi Alpha Divergence<a class="anchor-link" href="#Renyi-Alpha-Divergence">¶</a></h1><p>In many areas of machine learning, we use the KL-divergence to measure the 'distance' between probability distributions. However, the KL-divergence is a special case of a wider range of $\alpha$-family divergences. One of interest in the VI literature is the Renyi $\alpha$ divergence, and this post is about this family of divergences in the context of VI. This post is one of a series, and is mainly theory based on '<a href="https://arxiv.org/pdf/1602.02311.pdf">Renyi Divergence Variational Inference</a>', accepted  into NIPS 2016.</p>
 </div>
 </div>
 </div>
