--- a/VI-RA-1.html
+++ b/VI-RA-1.html
@@ -1225,7 +1225,7 @@ h6:hover .anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This is not great, as we are trying to maximise $\mathcal{L_{\alpha}}$. So our estimate of the bound will actually be a underestimate, making the bound less tight.</p>
+<p>This is not great, as we are trying to maximise $\mathcal{L_{\alpha}}$. So our estimate of the bound will actually be an underestimate, making the bound less tight.</p>
 </div>
 </div>
 </div>
