--- a/VI-RA-1.html
+++ b/VI-RA-1.html
@@ -1206,7 +1206,7 @@ h6:hover .anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>This is somewhat problematic though, as the log complicates matters. By Jensen's inequality (recalling that the log is convex):</p>
+<p>This is somewhat problematic though, as the log complicates matters. By Jensen's inequality (recalling that the log is concave):</p>
 <p>$\frac{1}{1 - \alpha} E_{q}[ log \ \frac{1}{N} \sum_{n}^{N} [(\frac{p(z_{n}, x)}{q(z_{n})})^{1-\alpha}]] \le \frac{1}{1 - \alpha} log \ \frac{1}{N} E_{q}[  \sum_{n}^{N} [(\frac{p(z_{n}, x)}{q(z_{n})})^{1-\alpha}]]$</p>
 </div>
 </div>
