Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -20,8 +20,8 @@
         <link rel="apple-touch-icon" sizes="144x144" href="https://chrisorm.github.io/theme/images/apple-touch-icon-144x144.png" />
         <link rel="icon" href="https://chrisorm.github.io/theme/images/apple-touch-icon-144x144.png" />
         <link href="https://chrisorm.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Infinite n♾rm - Full Atom Feed" />
-        <link href="https://chrisorm.github.io/feeds/{slug}.atom.xml" type="application/atom+xml" rel="alternate" title="Infinite n♾rm - [<pelican.contents.Article object at 0x7f8b1cbd8fd0>] Category Atom Feed" />
-        <link href="https://chrisorm.github.io/feeds/{slug}.atom.xml" type="application/atom+xml" rel="alternate" title="Infinite n♾rm - [<pelican.contents.Article object at 0x7f8b1cc76c10>, <pelican.contents.Article object at 0x7f8b1cfb4350>, <pelican.contents.Article object at 0x7f8b1cc29dd0>, <pelican.contents.Article object at 0x7f8b1cc3df50>, <pelican.contents.Article object at 0x7f8b1d640f10>, <pelican.contents.Article object at 0x7f8b1cd4ecd0>, <pelican.contents.Article object at 0x7f8b1d5756d0>, <pelican.contents.Article object at 0x7f8b1d2740d0>, <pelican.contents.Article object at 0x7f8b1d3af550>, <pelican.contents.Article object at 0x7f8b1ccba810>, <pelican.contents.Article object at 0x7f8b1d581f10>, <pelican.contents.Article object at 0x7f8b1d0bce50>, <pelican.contents.Article object at 0x7f8b1ccb5fd0>, <pelican.contents.Article object at 0x7f8b20f614d0>, <pelican.contents.Article object at 0x7f8b1cfdd110>, <pelican.contents.Article object at 0x7f8b1cd85250>, <pelican.contents.Article object at 0x7f8b1cde48d0>, <pelican.contents.Article object at 0x7f8b1d23d910>, <pelican.contents.Article object at 0x7f8b1d41b310>, <pelican.contents.Article object at 0x7f8b1d511bd0>, <pelican.contents.Article object at 0x7f8b1d2ec9d0>, <pelican.contents.Article object at 0x7f8b1ce5b790>, <pelican.contents.Article object at 0x7f8b1cfb4090>, <pelican.contents.Article object at 0x7f8b1cef28d0>] Category Atom Feed" />
+        <link href="https://chrisorm.github.io/feeds/{slug}.atom.xml" type="application/atom+xml" rel="alternate" title="Infinite n♾rm - [<pelican.contents.Article object at 0x7f1ff536b590>] Category Atom Feed" />
+        <link href="https://chrisorm.github.io/feeds/{slug}.atom.xml" type="application/atom+xml" rel="alternate" title="Infinite n♾rm - [<pelican.contents.Article object at 0x7f1ff5640f50>, <pelican.contents.Article object at 0x7f1ff5e66450>, <pelican.contents.Article object at 0x7f1ff5364a10>, <pelican.contents.Article object at 0x7f1ff53d8190>, <pelican.contents.Article object at 0x7f1ff536be50>, <pelican.contents.Article object at 0x7f1ff5699d50>, <pelican.contents.Article object at 0x7f1ff5728a50>, <pelican.contents.Article object at 0x7f1ff5af3b10>, <pelican.contents.Article object at 0x7f1ff5bb2f50>, <pelican.contents.Article object at 0x7f1ff55dcf90>, <pelican.contents.Article object at 0x7f1ff59b90d0>, <pelican.contents.Article object at 0x7f1ff59b62d0>, <pelican.contents.Article object at 0x7f1ff59b4d10>, <pelican.contents.Article object at 0x7f1ff53f4150>, <pelican.contents.Article object at 0x7f1ff5bb2190>, <pelican.contents.Article object at 0x7f1ff5ceb290>, <pelican.contents.Article object at 0x7f1ff5b23cd0>, <pelican.contents.Article object at 0x7f1ff5a7b9d0>, <pelican.contents.Article object at 0x7f1ff53fff50>, <pelican.contents.Article object at 0x7f1ff5472150>, <pelican.contents.Article object at 0x7f1ff5948c90>, <pelican.contents.Article object at 0x7f1ff545bed0>, <pelican.contents.Article object at 0x7f1ff5f3e190>, <pelican.contents.Article object at 0x7f1ff5ea79d0>, <pelican.contents.Article object at 0x7f1ff5a25950>] Category Atom Feed" />
     </head>
     <body>
         <div id="content-sans-footer">
@@ -63,7 +63,7 @@
         </form>
         <ul class="list-of-tags">
             <li>
-            <a href="/tags.html#AdventOfCode-ref">AdventOfCode<span>1</span></a>
+            <a href="/tags.html#AdventOfCode-ref">AdventOfCode<span>2</span></a>
             </li>
             <li>
             <a href="/tags.html#Alpha-Divergence-ref">Alpha Divergence<span>3</span></a>
@@ -152,6 +152,9 @@
             <li>
             <a href="/tags.html#VI-ref">VI<span>17</span></a>
             </li>
+            <li>
+            <a href="/tags.html#Xmas-Trolling-ref">Xmas Trolling<span>1</span></a>
+            </li>
         </ul>
     </div>
 </div>
@@ -160,6 +163,8 @@
     <div class="span8 offset2">
         <h2 id="AdventOfCode-ref" class="tag-title">AdventOfCode</h2>
         <ul class="articles-in-tag">
+ 
+            <li><a href="https://chrisorm.github.io/aoc1.html">Advent of Code Day 1 Using ML  </a></li>
  
             <li><a href="https://chrisorm.github.io/aoc13.html">Advent of Code Day 13 with Sympy  </a></li>
         </ul>
@@ -454,6 +459,12 @@
             <li><a href="https://chrisorm.github.io/VI-ELBO.html">Variational Inference - Deriving the ELBO  </a></li>
  
             <li><a href="https://chrisorm.github.io/VI-Why.html">Variational Inference - Why?  </a></li>
+        </ul>
+
+        <h2 id="Xmas-Trolling-ref" class="tag-title">Xmas Trolling</h2>
+        <ul class="articles-in-tag">
+ 
+            <li><a href="https://chrisorm.github.io/aoc1.html">Advent of Code Day 1 Using ML  </a></li>
         </ul>
 
     </div>
