--- a/output/categories.html
+++ b/output/categories.html
@@ -9,12 +9,12 @@
         <title>Infinite n♾rm - Categories</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="http://chrisorm.github.io:/theme/css/normalize.css">
+        <link rel="stylesheet" href="https://chrisorm.github.io:/theme/css/normalize.css">
         <link href='//fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="http://chrisorm.github.io:/theme/css/font-awesome.min.css">
-        <link rel="stylesheet" href="http://chrisorm.github.io:/theme/css/main.css">
-        <script src="http://chrisorm.github.io:/theme/js/vendor/modernizr-2.6.2.min.js"></script>
+        <link rel="stylesheet" href="https://chrisorm.github.io:/theme/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://chrisorm.github.io:/theme/css/main.css">
+        <script src="https://chrisorm.github.io:/theme/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -24,11 +24,11 @@
         <div id="wrapper">
     <h1>Categories on Infinite n♾rm</h1>
     <ul>
-        <li><a href="http://chrisorm.github.io:/category/interesting-problems.html">Interesting Problems</a> (1)</li>
-        <li><a href="http://chrisorm.github.io:/category/posts.html">posts</a> (23)</li>
+        <li><a href="https://chrisorm.github.io:/category/interesting-problems.html">Interesting Problems</a> (1)</li>
+        <li><a href="https://chrisorm.github.io:/category/posts.html">posts</a> (23)</li>
     </ul>
         </div>
 
-        <script src="http://chrisorm.github.io:/theme/js/main.js"></script>
+        <script src="https://chrisorm.github.io:/theme/js/main.js"></script>
     </body>
 </html>
